kyverno/policies/certificates/restrict-letsencrypt.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cert-manager-restrict-letsencrypt-issuer
  annotations:
    policies.proximity.io/title: Restrict Let's Encrypt ClusterIssuer
    policies.kyverno.io/category: Cert-Manager
    policies.rules.io/severity: info
    policies.kyverno.io/subject: Certificate
    policies.kyverno.io/description: >-
      To ensure the Infra team has full visibility into certificates issued
      under the 'uw.systems' domain, we coordinate the use of public Let's Encrypt
      issuers. This policy helps us track domain usage and provide lifecycle support.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-in-for-letsencrypt
      match:
        any:
          - resources:
              kinds:
                - Certificate
      validate:
        message: >-
          Direct use of 'letsencrypt' for *.uw.systems is restricted for visibility. 
          Please create an 'PolicyException' in kube-system and reach out to us on #infra
        pattern:
          spec:
            (dnsNames):
              - "*.uw.systems"
            issuerRef:
              name: "!letsencrypt"
              kind: ClusterIssuer
