kyverno/policies/certificates/test/patched-resources.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: without-revision-history
  namespace: team-a
spec:
  revisionHistoryLimit: 2
  dnsNames:
    - "app.uw.systems"
  issuerRef:
    name: "selfsigned"
    kind: ClusterIssuer
