kyverno/policies/certificates/test/prerequisite-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    uw.systems/owner: system
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
  labels:
    uw.systems/owner: system
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-c
  labels:
    uw.systems/owner: system
