kyverno/policies/certificates/test/cluster-resources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: cluster-resources
spec:
  crds:
    - certificates-crd.yaml

  resources:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: team-a
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: team-b
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: team-c
