kyverno/policies/certificates/test/kyverno-test-skip.yaml
# due to bug in 1.17.1 this test can only be ran from kyverno master build
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-letsencrypt-cluster-issuer
clusterResources:
  - cluster-resources.yaml
policies:
  - ../restrict-letsencrypt.yaml
resources:
  - resources.yaml
exceptions:
  - exception.yaml
results:
  # Should PASS because it's NOT using letsencrypt
  - policy: restrict-letsencrypt-cluster-issuer
    resources: ["selfsigned-cert"]
    kind: Certificate
    result: pass

  # Should skip because it's non uw.system
  - policy: restrict-letsencrypt-cluster-issuer
    resources: ["selfsigned-cert-non-uw"]
    kind: Certificate
    result: skip

  # Should FAIL because it IS using letsencrypt for the restricted domain
  - policy: restrict-letsencrypt-cluster-issuer
    resources: ["letsencrypt-cert"]
    kind: Certificate
    result: fail

  # Should skip because of exception
  - policy: restrict-letsencrypt-cluster-issuer
    resources: ["letsencrypt-cert-approved"]
    kind: Certificate
    result: skip

  # Should block different domain then exception
  - policy: restrict-letsencrypt-cluster-issuer
    resources: ["letsencrypt-cert-not-approved"]
    kind: Certificate
    result: fail
